[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-experiment-launcher"
description = "A library for a minimal framework that can be used to build experimental interfaces."
authors = [
    { name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dynamic = ["version", "readme"]

classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]

dependencies = [
    "pydantic>=2.7, <3.0",
    "gitpython>=3.1, <4.0",
    "semver",
    "aind_behavior_services>=0.8.0, <0.9.0",
    "aind-slims-api<0.2"
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.ExperimentLauncher/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.ExperimentLauncher/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.ExperimentLauncher/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.ExperimentLauncher/releases"

[project.optional-dependencies]
aind-services = [
    "aind-watchdog-service>=0.1.0, <0.2.0",
    "aind-data-schema<=1.2"
]

dev = [
    "ruff",
    "codespell",
    "coverage",
    "aind-behavior-experiment-launcher[aind-services]",
]
docs = [
    "aind-behavior-experiment-launcher[aind-services]",
    "Sphinx<7.3",
    "furo",
    "sphinx-jinja",
    "sphinx-jsonschema",
    "sphinx-copybutton",
    "sphinx_mdinclude",
    "autodoc_pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aind_behavior_task_launcher = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "aind_behavior_experiment_launcher.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I"]
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "google" }

[tool.codespell]
skip = ".git,*.pdf,*.svg,./docs/_build"
ignore-words-list = "nd, assertIn"

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_behavior_experiment_launcher", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 60